signup page page and user profile verification popup done

--- a/src/forms/SignupForm/SignupForm.module.css
+++ b/src/forms/SignupForm/SignupForm.module.css
@@ -27,6 +27,12 @@
 .lastNameRoot {
   width: calc(66% - 9px);
 }
+.phone {
+  margin-bottom: 20px;
+}
+.otp {
+  margin-bottom: 20px;
+}
 
 .password {
   @apply --marketplaceModalPasswordMargins;
