--- a/src/forms/SignupForm/SignupForm.module.css
+++ b/src/forms/SignupForm/SignupForm.module.css
@@ -10,13 +10,16 @@
   }
 }
 
+.fromgp {
+  margin: 0 0 20px;
+}
 .name {
   display: flex;
   justify-content: space-between;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 
   @media (--viewportMedium) {
-    margin-top: 32px;
+    /* margin-top: 32px; */
   }
 }
 
@@ -35,7 +38,7 @@
 }
 
 .password {
-  @apply --marketplaceModalPasswordMargins;
+  /* @apply --marketplaceModalPasswordMargins; */
 }
 
 .bottomWrapper {
@@ -57,4 +60,49 @@
     text-decoration: underline;
     cursor: pointer;
   }
+}
+.phoneInputField {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+.phnWithErr {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.phnErrMsg {
+  margin-top: 6px;
+  margin-bottom: 10px;
+  color: var(--failColor);
+  overflow: hidden;
+  font-weight: var(--fontWeightMedium);
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+.otpErrMsg {
+  margin-top: 6px;
+  margin-bottom: 10px;
+  color: var(--failColor);
+  overflow: hidden;
+  font-weight: var(--fontWeightMedium);
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
+.sendOtpButton {
+  color: #fff;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  border: 0;
+  font-size: 12px;
+  background: #a91722;
+  padding: 0 12px;
+}
+.sendOtpButton:disabled {
+  cursor: not-allowed;
+  background: grey;
 }
