--- a/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
+++ b/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
@@ -301,3 +301,38 @@
 .submitButton {
   margin-top: 24px;
 }
+
+.phnErrMsg {
+  margin-top: 6px;
+  margin-bottom: 10px;
+  color: var(--failColor);
+  overflow: hidden;
+  font-weight: var(--fontWeightMedium);
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+.phoneInputField {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+.phnWithErr {
+  display: flex;
+  flex-direction: column;
+  /* width: 100%; */
+}
+.sendOtpButton {
+  color: #fff;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  border: 0;
+  font-size: 12px;
+  background: #a91722;
+  padding: 0 12px;
+}
+.sendOtpButton:disabled {
+  cursor: not-allowed;
+  background: grey;
+}
