--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -61,6 +61,9 @@
 /* Mobile only social media links */
 .someLiksMobile {
   margin-bottom: 24px;
+  @media (max-width: 768px) {
+    display: none;
+  }
 
   @media (--viewportMedium) {
     display: none;
@@ -338,16 +341,25 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
-
+  @media (max-width: 575px) {
+    padding: 0 15px;
+  }
   & .footerlinks {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
     margin: 40px 0 30px;
+    @media (max-width: 575px) {
+      flex-direction: column;
+    }
     & a {
       color: #c4c4c4;
       font-size: 16px;
       font-weight: 300;
+      @media (max-width: 575px) {
+        margin: 0 0 10px;
+        text-align: center;
+      }
     }
   }
 }
