--- a/src/components/Topbar/Topbar.module.css
+++ b/src/components/Topbar/Topbar.module.css
@@ -33,6 +33,14 @@
 .home {
   display: flex;
   padding: calc((var(--topbarHeight) - var(--Topbar_logoHeight)) / 2) 24px;
+  @media (max-width: 575px) {
+    padding: 0 5px;
+  }
+  & img {
+    @media (max-width: 768px) {
+      height: 50px;
+    }
+  }
 }
 
 .logoutButton {
