--- a/src/containers/LandingPage/LandingPage.module.css
+++ b/src/containers/LandingPage/LandingPage.module.css
@@ -13,6 +13,7 @@
   height: 67.5vh;
   max-height: 600px;
   padding: 0;
+  background: #f8f8f8;
 
   @media (--viewportMedium) {
     min-height: 500px;
@@ -67,17 +68,21 @@
 }
 
 .sectionContent {
-  margin: var(--LandingPage_sectionMarginTop) 24px 51px 24px;
+  margin: 50px auto 51px;
+  width: 100%;
+  @media (max-width: 1023px) {
+    margin: 50px 0;
+  }
 
   @media (--viewportMedium) {
     max-width: 100%;
-    margin: var(--LandingPage_sectionMarginTopMedium) 24px 60px 24px;
+    /* margin: 60px 24px 60px 24px; */
   }
 
   @media (--viewportLarge) {
     max-width: 1128px;
     padding: 0 36px 0 36px;
-    margin: var(--LandingPage_sectionMarginTopLarge) auto 93px auto;
+    /* margin: 60px auto 60px auto; */
   }
 
   @media (--viewportXLarge) {
@@ -111,5 +116,113 @@
 
   @media (--viewportLarge) {
     top: calc(-1 * var(--LandingPage_sectionMarginTopLarge));
+  }
+}
+.updthmform {
+  @media (max-width: 575px) {
+    padding: 0 15px;
+  }
+  & h2 {
+    text-align: center;
+    color: #000;
+    font-size: 48px;
+    font-weight: 600;
+    margin: 0 0 26px;
+    @media (max-width: 767px) {
+      font-size: 38px;
+    }
+    @media (max-width: 575px) {
+      font-size: 28px;
+      line-height: 38px;
+    }
+  }
+  & p {
+    text-align: center;
+    color: #000;
+    font-size: 24px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    margin: 0 0 50px;
+    @media (max-width: 767px) {
+      font-size: 18px;
+    }
+    @media (max-width: 575px) {
+      font-size: 16px;
+    }
+  }
+  & .lformrow {
+    display: flex;
+    margin: 0 0 20px;
+    justify-content: center;
+    @media (max-width: 1023px) {
+      padding: 0 50px;
+      flex-wrap: wrap;
+    }
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
+    @media (max-width: 575px) {
+      padding: 0;
+    }
+    & .lformcol {
+      padding: 0 10px;
+      flex-basis: 33%;
+      @media (max-width: 1023px) {
+        flex-basis: 30%;
+        margin: 0 0 20px;
+      }
+      &:last-child {
+        flex-basis: 45%;
+        @media (max-width: 1023px) {
+          flex-basis: 35%;
+        }
+      }
+      & label {
+        color: #000;
+        padding: 0 0 10px;
+        font-weight: 500;
+      }
+    }
+    & .formcontrol {
+      height: 45px;
+      border: 1px solid #bdbdbd;
+      border-radius: 10px;
+      padding: 5px 12px;
+      background-color: #fff;
+      font-size: 14px;
+      font-weight: 200;
+      background-position: 95%;
+      background-size: 12px;
+    }
+  }
+  & .submitButton {
+    margin: 50px auto 20px;
+    max-width: 35%;
+    min-height: 50px;
+    display: block;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 300;
+    @media (max-width: 767px) {
+      max-width: 65%;
+    }
+    @media (max-width: 575px) {
+      max-width: 80%;
+    }
+    & img {
+      height: 16px;
+      margin: 0 10px 0 0;
+    }
+  }
+  & .aylbtntxt {
+    margin: 0;
+    font-size: 18px;
+    letter-spacing: 0;
+    & a {
+      margin: 0 0 0 5px;
+      font-weight: 600;
+      text-decoration: underline;
+    }
   }
 }
