--- a/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
+++ b/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
@@ -312,6 +312,16 @@
   line-height: 24px;
   letter-spacing: 0;
 }
+.errorMessage {
+  margin-top: 6px;
+  margin-bottom: 10px;
+  color: var(--failColor);
+  overflow: hidden;
+  font-weight: var(--fontWeightMedium);
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0;
+}
 .phoneInputField {
   display: flex;
   flex-direction: row;
