--- a/src/forms/ProfileSettingsForm/PhoneInput2.css
+++ b/src/forms/ProfileSettingsForm/PhoneInput2.css
@@ -731,11 +731,11 @@
   padding-left: 48px;
   margin-left: 0;
   background: #ffffff;
-  border: 1px solid #cacaca;
-  border-radius: 5px;
+  border-bottom: 2px solid #38394e;
+  border-radius: 0;
   line-height: 25px;
   height: 35px;
-  width: 300px;
+  width: 100%;
   outline: none;
 }
 .react-tel-input .form-control.invalid-number {
@@ -754,8 +754,8 @@
   bottom: 0;
   padding: 0;
   background-color: #f5f5f5;
-  border: 1px solid #cacaca;
-  border-radius: 3px 0 0 3px;
+  border-bottom: 2px solid #38394e;
+  border-radius: 0;
 }
 .react-tel-input .flag-dropdown:hover,
 .react-tel-input .flag-dropdown:focus {
