--- a/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
+++ b/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
@@ -10,17 +10,25 @@
 
 .sectionContainer {
   padding: 0;
-  margin-bottom: 36px;
+  margin-bottom: 30px;
 
   @media (--viewportMedium) {
     padding: 0;
-    margin-bottom: 56px;
+    margin-bottom: 30px;
   }
 }
-
+.centerh3 {
+  text-align: center;
+  & .sectionTitle {
+    color: #4e4e4e;
+    font-size: 22px;
+  }
+}
 .sectionTitle {
   /* Font */
-  color: var(--matterColorAnti);
+  color: #000;
+  font-size: 18px;
+  font-weight: 500;
 
   margin-top: 0;
   margin-bottom: 12px;
@@ -29,7 +37,7 @@
 
   @media (--viewportMedium) {
     margin-top: 0;
-    margin-bottom: 24px;
+    margin-bottom: 14px;
     padding-top: 4px;
     padding-bottom: 4px;
   }
@@ -54,6 +62,8 @@
 .uploadAvatarWrapper {
   margin-top: 18px;
   margin-bottom: 18px;
+  display: flex;
+  justify-content: center;
 
   @media (--viewportMedium) {
     margin-top: 44px;
@@ -171,6 +181,11 @@
   margin-top: 0;
   margin-bottom: 0;
 
+  @media (max-width: 575px) {
+    right: 0;
+    bottom: 0;
+  }
+
   @media (--viewportMedium) {
     /* Position: under */
     bottom: -10px;
@@ -241,11 +256,12 @@
 
 .tip {
   @apply --marketplaceDefaultFontStyles;
-  color: var(--matterColorAnti);
+  color: #8c8c8c;
   margin-top: 0;
   margin-bottom: 12px;
   padding-top: 5px;
   padding-bottom: 1px;
+  font-weight: 400;
 
   @media (--viewportMedium) {
     margin-top: 0;
@@ -257,11 +273,12 @@
 
 .fileInfo {
   @apply --marketplaceH5FontStyles;
-  color: var(--matterColorAnti);
+  color: #4e4e4e;
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 5px;
   padding-bottom: 1px;
+  font-weight: 400;
 
   @media (--viewportMedium) {
     margin-top: 0;
@@ -274,19 +291,19 @@
 .nameContainer {
   display: flex;
   justify-content: space-between;
-  margin-top: 12px;
+  margin-top: 0;
 
   @media (--viewportMedium) {
-    margin-top: 24px;
+    margin-top: 0;
   }
 }
 
 .firstName {
-  width: calc(34% - 9px);
+  width: calc(48% - 9px);
 }
 
 .lastName {
-  width: calc(66% - 9px);
+  width: calc(48% - 9px);
 }
 
 .bioInfo {
@@ -296,10 +313,6 @@
   @media (--viewportMedium) {
     margin-top: 16px;
   }
-}
-
-.submitButton {
-  margin-top: 24px;
 }
 
 .phnErrMsg {
@@ -330,7 +343,7 @@
 .phnWithErr {
   display: flex;
   flex-direction: column;
-  /* width: 100%; */
+  width: 100%;
 }
 .sendOtpButton {
   color: #fff;
@@ -345,4 +358,55 @@
 .sendOtpButton:disabled {
   cursor: not-allowed;
   background: grey;
+}
+.fromgroup {
+  margin: 0 0 25px;
+}
+.inlinefrom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.halfinput {
+  flex-basis: 48%;
+}
+.thirdinput {
+  flex-basis: 30%;
+}
+.inlinefrom button {
+  min-height: 44px;
+  max-width: 48%;
+}
+.remove {
+  background: #8c8c8c;
+  color: #000;
+}
+.remove:hover {
+  color: #fff;
+}
+.inlinefrom button:disabled {
+  background-color: #eee;
+}
+.reactSelect {
+  border-bottom: 2px solid #38394e;
+}
+.reactSelect > div {
+  border-radius: 0;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+}
+.reactSelect > div > div {
+  padding: 0;
+}
+.sectionContainer p {
+  color: #c4c4c4;
+  line-height: 20px;
+}
+.submitButton {
+  background: #a91722;
+  min-height: 45px;
+  border-radius: 10px;
+  padding: 0;
+  margin-top: 40px;
 }
