--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -452,7 +452,7 @@
 }
 .locationBio p {
   display: flex;
-  font-size: 24px !important;
+  font-size: 16px !important;
   color: #000 !important;
 }
 .locationBio p span {
@@ -463,4 +463,7 @@
 .pInfo {
   margin: 50px 0 0;
   max-width: 60%;
+}
+.lan span {
+  flex-basis: auto !important;
 }
