--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -258,10 +258,11 @@
 .locationBio span img {
   margin: 0 10px 0 0;
 }
-.locationBio p {
+.infotxtp {
   color: #000;
   font-weight: 400;
   line-height: 24px;
+  font-size: 16px !important;
 }
 .lawyerDetail hr {
   margin-bottom: 50px;
@@ -452,7 +453,7 @@
 }
 .locationBio p {
   display: flex;
-  font-size: 16px !important;
+  font-size: 20px;
   color: #000 !important;
 }
 .locationBio p span {
@@ -464,6 +465,11 @@
   margin: 50px 0 0;
   max-width: 60%;
 }
+.lan {
+  margin: 0 auto 0 0;
+  flex-basis: 40%;
+}
 .lan span {
   flex-basis: auto !important;
+  margin: 0 10px 0 0;
 }
