--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -455,6 +455,7 @@
   display: flex;
   font-size: 20px;
   color: #000 !important;
+  word-break: break-all;
 }
 .locationBio p span {
   font-size: 20px !important;
