--- a/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
+++ b/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
@@ -332,6 +332,10 @@
   line-height: 24px;
   letter-spacing: 0;
 }
+.info {
+  color: #4e4e4e;
+  font-size: 18px;
+}
 .errorMessage {
   margin-top: 6px;
   margin-bottom: 10px;
