--- a/src/containers/SearchPage/SearchPage.module.css
+++ b/src/containers/SearchPage/SearchPage.module.css
@@ -21,7 +21,7 @@
   /* Layout */
   width: 100%;
   flex-grow: 1;
-  display: flex;
+  /* display: flex; */
 
   @media (--viewportMedium) {
     position: relative;
@@ -166,5 +166,189 @@
 
   @media (--viewportLarge) {
     width: 37.5vw;
+  }
+}
+
+.sections {
+  margin: 0;
+  padding-top: 1px;
+}
+
+.section {
+  overflow: auto;
+}
+
+/* Square corners for the last section if it's even */
+.section:nth-of-type(2n):last-of-type {
+  @media (--viewportMedium) {
+    border-radius: 4px 4px 0 0;
+  }
+}
+
+/* Every other section has a light background */
+.section:nth-of-type(2n) {
+  background-color: var(--matterColorLight);
+  @media (--viewportMedium) {
+    border-radius: 4px;
+  }
+}
+
+.sectionContent {
+  margin: 50px auto 51px;
+  width: 100%;
+  @media (max-width: 1023px) {
+    margin: 50px 0;
+  }
+
+  @media (--viewportMedium) {
+    max-width: 100%;
+    /* margin: 60px 24px 60px 24px; */
+  }
+
+  @media (--viewportLarge) {
+    max-width: 1128px;
+    padding: 0 36px 0 36px;
+    /* margin: 60px auto 60px auto; */
+  }
+
+  @media (--viewportXLarge) {
+    max-width: 1056px;
+    padding: 0;
+  }
+}
+
+.sectionContentFirstChild {
+  composes: sectionContent;
+  margin-top: 3vh;
+}
+
+/* A bar on top of light sections */
+.section:nth-of-type(2n) .sectionContent::before {
+  background: var(--marketplaceColor);
+  content: '';
+  display: block;
+  width: 109px;
+  height: 6px;
+
+  /* Place the bar on top of .sectionContent top margin */
+  position: relative;
+  top: calc(-1 * var(--LandingPage_sectionMarginTop));
+
+  @media (--viewportMedium) {
+    width: 192px;
+    height: 8px;
+    top: calc(-1 * var(--LandingPage_sectionMarginTopMedium));
+  }
+
+  @media (--viewportLarge) {
+    top: calc(-1 * var(--LandingPage_sectionMarginTopLarge));
+  }
+}
+.updthmform {
+  @media (max-width: 575px) {
+    padding: 0 15px;
+  }
+  & h2 {
+    text-align: center;
+    color: #000;
+    font-size: 48px;
+    font-weight: 600;
+    margin: 0 0 26px;
+    @media (max-width: 767px) {
+      font-size: 38px;
+    }
+    @media (max-width: 575px) {
+      font-size: 28px;
+      line-height: 38px;
+    }
+  }
+  & p {
+    text-align: center;
+    color: #000;
+    font-size: 24px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    margin: 0 0 50px;
+    @media (max-width: 767px) {
+      font-size: 18px;
+    }
+    @media (max-width: 575px) {
+      font-size: 16px;
+    }
+  }
+  & .lformrow {
+    display: flex;
+    margin: 0 0 20px;
+    justify-content: center;
+    @media (max-width: 1023px) {
+      padding: 0 50px;
+      flex-wrap: wrap;
+    }
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
+    @media (max-width: 575px) {
+      padding: 0;
+    }
+    & .lformcol {
+      padding: 0 10px;
+      flex-basis: 33%;
+      @media (max-width: 1023px) {
+        flex-basis: 30%;
+        margin: 0 0 20px;
+      }
+      &:last-child {
+        flex-basis: 45%;
+        @media (max-width: 1023px) {
+          flex-basis: 35%;
+        }
+      }
+      & label {
+        color: #000;
+        padding: 0 0 10px;
+        font-weight: 500;
+      }
+    }
+    & .formcontrol {
+      height: 45px;
+      border: 1px solid #bdbdbd;
+      border-radius: 10px;
+      padding: 5px 12px;
+      background-color: #fff;
+      font-size: 14px;
+      font-weight: 200;
+      background-position: 95%;
+      background-size: 12px;
+    }
+  }
+  & .submitButton {
+    margin: 50px auto 20px;
+    max-width: 35%;
+    min-height: 50px;
+    display: block;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 300;
+    @media (max-width: 767px) {
+      max-width: 65%;
+    }
+    @media (max-width: 575px) {
+      max-width: 80%;
+    }
+    & img {
+      height: 16px;
+      margin: 0 10px 0 0;
+    }
+  }
+  & .aylbtntxt {
+    margin: 0;
+    font-size: 18px;
+    letter-spacing: 0;
+    & a {
+      margin: 0 0 0 5px;
+      font-weight: 600;
+      text-decoration: underline;
+    }
   }
 }
