--- a/src/components/SearchResultsPanel/SearchResultsPanel.module.css
+++ b/src/components/SearchResultsPanel/SearchResultsPanel.module.css
@@ -6,12 +6,12 @@
 .listingCards {
   padding: 0 24px 96px 24px;
 
-  @media (--viewportMedium) {
+  margin: 0px 200px 0px 200px;
+  /* @media (--viewportMedium) {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-
+  } */
   @media (--viewportLarge) {
     padding: 0 36px 96px 36px;
   }
@@ -88,4 +88,7 @@
   @media (--viewportLarge) {
     padding: 0 36px;
   }
+}
+.resultCount {
+  text-decoration: underline;
 }
