--- a/src/forms/ContactDetailsForm/ContactDetailsForm.module.css
+++ b/src/forms/ContactDetailsForm/ContactDetailsForm.module.css
@@ -144,3 +144,13 @@
     margin: 24px 0;
   }
 }
+.otpButton {
+  margin: 20px auto 20px;
+  max-width: 35%;
+  min-height: 50px;
+  display: block;
+  border-radius: 10px;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 300;
+}
