promotion tab done

--- a/src/components/TopbarDesktop/TopbarDesktop.module.css
+++ b/src/components/TopbarDesktop/TopbarDesktop.module.css
@@ -239,7 +239,8 @@
 }
 
 .profileSettingsLink,
-.yourListingsLink {
+.yourListingsLink,
+.promotionLink {
   @apply --marketplaceH4FontStyles;
   position: relative;
   display: block;
