--- a/src/components/CreateListing/CreateListing.module.css
+++ b/src/components/CreateListing/CreateListing.module.css
@@ -15,14 +15,50 @@
 }
 
 .headingContainer {
-  display: flex;
-  flex-direction: row;
-  @media (max-width: 575px) {
-    flex-direction: column;
+  margin-bottom: 20px;
+  & h3 {
+    text-align: center;
+    font-size: 24px;
+    color: #000;
+    @media (max-width: 575px) {
+      font-size: 20px;
+    }
+    & span {
+      & span {
+        display: block;
+        color: #7a7a7a;
+        font-size: 15px;
+        font-weight: 400;
+        margin: 10px 0 0;
+        line-height: 18px;
+      }
+    }
   }
 }
-
-.heading {
-  margin-right: 24px;
-  hyphens: auto;
+.consultationrow {
+  margin-bottom: 20px;
+  & button {
+    background-color: var(--marketplaceColor);
+    color: var(--matterColorLight);
+    padding: 10px 15px;
+    text-align: center;
+    display: block;
+    border-radius: 10px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    border: 0;
+    @media (max-width: 575px) {
+      font-size: 16px;
+    }
+  }
+  & .infoText {
+    text-align: center;
+    color: #7a7a7a;
+    font-size: 14px;
+    font-weight: 300;
+    margin: 5px 0;
+    line-height: 16px;
+  }
 }
