--- a/src/components/EditListingWizard/EditListingWizard.module.css
+++ b/src/components/EditListingWizard/EditListingWizard.module.css
@@ -84,14 +84,14 @@
   flex-grow: 1;
 
   @media (--viewportLarge) {
-    padding: 88px 36px 82px 59px;
+    padding: 11px 24px 0 24px;
     border-left: 1px solid var(--matterColorNegative);
     background-color: var(--matterColorLight);
   }
 
-  @media (--viewportLargeWithPaddings) {
+  /* @media (--viewportLargeWithPaddings) {
     padding: 88px calc((100% - 1056px) / 2) 82px 59px;
-  }
+  } */
 }
 
 .payoutDetails {
