--- a/src/components/SearchResultsPanel/SearchResultsPanel.module.css
+++ b/src/components/SearchResultsPanel/SearchResultsPanel.module.css
@@ -6,7 +6,9 @@
 .listingCards {
   padding: 0 24px 96px 24px;
 
-  margin: 0px 200px 0px 200px;
+  margin: 0px auto;
+  width: 100%;
+  max-width: 1040px;
   /* @media (--viewportMedium) {
     display: flex;
     flex-direction: row;
@@ -90,5 +92,11 @@
   }
 }
 .resultCount {
-  text-decoration: underline;
+  color: #000;
+  font-size: 20px;
+  width: 100%;
+  display: block;
+  margin: 0 0 25px;
+  border-bottom: 1px solid #d1d1d1;
+  padding-bottom: 10px;
 }
