--- a/src/containers/SearchPage/SearchPage.module.css
+++ b/src/containers/SearchPage/SearchPage.module.css
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   padding: 2px 0 0 0;
-
+  background: #f8f8f8;
   @media (--viewportMedium) {
     padding: 18px 0 0 0;
     /**
