--- a/src/containers/SearchPage/PromotionPage.module.css
+++ b/src/containers/SearchPage/PromotionPage.module.css
@@ -5,12 +5,38 @@
   background-color: var(--matterColorLight);
 }
 .content {
-  width: calc(100% - 48px);
+  /* width: calc(100% - 48px);
   margin: 12px 24px 24px 24px;
 
   @media (--viewportMedium) {
     max-width: 565px;
     margin: 55px auto 56px auto;
+  } */
+  padding: 0 36px 36px 36px;
+  margin: 80px auto 0 auto;
+  max-width: 62.5vw;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  @media (max-width: 1199px) {
+    max-width: 80vw;
+  }
+  @media (max-width: 991px) {
+    max-width: 100vw;
+  }
+  @media (max-width: 575px) {
+    padding: 0 15px 36px;
+  }
+  & a {
+    flex-basis: calc(50% - 12px);
+    margin: 0 24px 30px 0;
+    @media (max-width: 575px) {
+      margin-right: 0;
+      flex-basis: 100%;
+    }
+    &:nth-of-type(2n) {
+      margin-right: 0;
+    }
   }
 }
 
@@ -25,4 +51,8 @@
 .heading {
   margin-right: 24px;
   hyphens: auto;
+}
+.nrftxt {
+  text-align: center;
+  color: var(--marketplaceColor);
 }
