manage listing page

--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -141,3 +141,48 @@
     margin: auto 36px 0 36px;
   }
 }
+.tablesclmob {
+  @media (max-width: 767px) {
+    overflow-x: scroll;
+  }
+  & .table {
+    @media (max-width: 767px) {
+      min-width: 800px;
+    }
+  }
+}
+.table {
+  width: 100%;
+  padding: 1em;
+  margin: 20px 0;
+  border-collapse: collapse;
+  box-shadow: 0 1px 2px 0 #c6e8c9;
+  & thead {
+    background-color: #caf0ec;
+    font-size: 16px;
+  }
+
+  & th {
+    text-align: left;
+    padding: 8px;
+    background-color: 1px solid #ffffff;
+    color: #14877c;
+  }
+  & td {
+    text-align: left;
+    padding: 8px;
+  }
+
+  & tr {
+    height: 50px;
+  }
+}
+.heading {
+  position: relative;
+  width: 80vw;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: var(--marketplaceColor);
+}
