--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -18,6 +18,9 @@
     padding: 0 36px;
   }
 }
+.pointer {
+  pointer-events: none;
+}
 
 .tab {
   display: flex;
@@ -141,42 +144,7 @@
     margin: auto 36px 0 36px;
   }
 }
-.tablesclmob {
-  @media (max-width: 767px) {
-    overflow-x: scroll;
-  }
-  & .table {
-    @media (max-width: 767px) {
-      min-width: 800px;
-    }
-  }
-}
-.table {
-  width: 100%;
-  padding: 1em;
-  margin: 20px 0;
-  border-collapse: collapse;
-  box-shadow: 0 1px 2px 0 #c6e8c9;
-  & thead {
-    background-color: #caf0ec;
-    font-size: 16px;
-  }
 
-  & th {
-    text-align: left;
-    padding: 8px;
-    background-color: 1px solid #ffffff;
-    color: #14877c;
-  }
-  & td {
-    text-align: left;
-    padding: 8px;
-  }
-
-  & tr {
-    height: 50px;
-  }
-}
 .heading {
   position: relative;
   width: 80vw;
@@ -185,4 +153,79 @@
   margin-top: 10px;
   margin-bottom: 10px;
   color: var(--marketplaceColor);
+}
+
+/* horizontaldesign */
+.horizontalcard {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-left: brown 5px solid;
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0px;
+}
+.lefthorizontal {
+  width: 80%;
+  padding-left: 10px;
+}
+.righthorizontal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20%;
+  padding-bottom: 20px;
+  /* box-shadow: -3px 0px 2px 0px #aaaaaa; */
+  border-left: rgb(179, 172, 172) 1px solid;
+  padding-top: 10px;
+  margin: 20px 0px;
+}
+.rightlowerdiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: -3px 0px 2px 0px #aaaaaa;
+  width: 100%;
+  height: 100%;
+}
+.span {
+  background-color: #ebffef;
+  padding: 2px 2px;
+  padding-right: 15px;
+  padding-left: 15px;
+  color: #2db10b;
+}
+.editbutton {
+  background-color: #2db10b;
+  padding: 2px 2px;
+  border-radius: 5px;
+  padding-right: 20px;
+  padding-left: 18px;
+  align-items: center;
+  border: none;
+}
+.price {
+  padding: 20px;
+  color: #a91722;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: poppins;
+}
+.togglemenu {
+  display: inline;
+}
+.linkcolor {
+  color: #ebffef;
+}
+.readmore {
+  color: #a91722;
+}
+.inlinebutton {
+  width: 200px;
+  color: #f30d0d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+.buttontext {
+  color: #f30d0d;
 }
