--- a/src/components/UserResultCard/UserResultCard.module.css
+++ b/src/components/UserResultCard/UserResultCard.module.css
@@ -131,10 +131,26 @@
 .SectionAvatarImg {
   position: relative;
 }
+.userContent{
+  display: flex;
+  flex-direction: row;
+  border-right: 2px solid rgb(201, 198, 198);
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+.userBio{
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+}
 .cardContainer {
   background: #fff;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin-bottom: 20px;
   align-items: center;
   padding: 15px;
@@ -143,7 +159,13 @@
     flex-direction: column;
   }
 }
-
+.bookingContent{
+  border-left: 2px solid rgb(201, 198, 198);
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 10px;
+}
 .userInfo {
   margin-left: 10px;
   text-transform: capitalize;
