--- a/src/forms/EditListingPricingForm/EditListingPricingForm.module.css
+++ b/src/forms/EditListingPricingForm/EditListingPricingForm.module.css
@@ -33,6 +33,41 @@
     margin-top: 100px;
   }
 }
+.sectionContainer {
+  padding: 0;
+  margin-bottom: 30px;
+
+  @media (--viewportMedium) {
+    padding: 0;
+    margin-bottom: 30px;
+  }
+}
+.fromgroup {
+  margin: 0 0 25px;
+}
+.sectionContainer p {
+  color: #c4c4c4;
+  line-height: 20px;
+}
+.inlinefrom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.inlinefrom button {
+  min-height: 44px;
+  max-width: 48%;
+}
+.remove {
+  background: #8c8c8c;
+  color: #000;
+}
+.remove:hover {
+  color: #fff;
+}
+.inlinefrom button:disabled {
+  background-color: #eee;
+}
 .priceInfoText {
   font-size: 14px;
   color: #7a7a7a;
