--- a/src/components/UserResultCard/UserResultCard.module.css
+++ b/src/components/UserResultCard/UserResultCard.module.css
@@ -131,21 +131,49 @@
 .SectionAvatarImg {
   position: relative;
 }
-.userContent{
+.userContent {
   display: flex;
   flex-direction: row;
-  border-right: 2px solid rgb(201, 198, 198);
   padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 20px;
+  max-width: 240px;
+  flex-basis: 240px;
+  align-items: center;
+  @media (max-width: 767px) {
+    max-width: 100%;
+    flex-basis: 100%;
+    align-items: center;
+    width: 100%;
+    border: 0;
+    padding: 5px;
+  }
 }
-.userBio{
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
+.userBio {
+  flex-basis: calc(100% - 146px);
+  padding: 0 15px;
+  word-break: break-all;
+  line-height: 20px;
+  border-right: 1px solid rgb(201, 198, 198);
+  border-left: 1px solid rgb(201, 198, 198);
+  min-height: 80px;
+  align-items: center;
+  display: flex;
+  font-size: 14px;
+
+  @media (max-width: 767px) {
+    width: 100%;
+    border-left: 0;
+    min-height: 30px;
+  }
+  @media (max-width: 575px) {
+    min-height: auto;
+    border-right: 0;
+    padding: 0;
+  }
 }
+
 .cardContainer {
   background: #fff;
   display: flex;
@@ -155,23 +183,33 @@
   align-items: center;
   padding: 15px;
   border-radius: 10px;
-  @media (max-width: 575px) {
+  @media (max-width: 767px) {
     flex-direction: column;
   }
 }
-.bookingContent{
-  border-left: 2px solid rgb(201, 198, 198);
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 10px;
+.dmuser {
+  display: flex;
+  flex-basis: calc(100% - 240px);
+  align-items: center;
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+  @media (max-width: 575px) {
+    flex-direction: column;
+    padding: 10px 0 0;
+  }
+}
+.bookingContent {
+  padding: 20px 10px 20px 20px;
+  @media (max-width: 575px) {
+    padding: 10px 0 0;
+    width: 100%;
+  }
 }
 .userInfo {
   margin-left: 10px;
   text-transform: capitalize;
   @media (max-width: 575px) {
-    text-align: center;
-    margin: 10px 0;
   }
   & .userName {
     font-size: 14px;
@@ -179,7 +217,7 @@
     line-height: 18px;
     margin: 0 0 5px;
   }
-  & .userVerified{
+  & .userVerified {
     font-size: 13px;
     color: #a3a3a3;
     line-height: 18px;
@@ -207,6 +245,9 @@
   border: 0;
   max-width: 200px;
   line-height: 20px;
+  @media (max-width: 575px) {
+    max-width: none;
+  }
 }
 .profileBtn:hover {
   background-color: var(--marketplaceColorDark);
