--- a/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
+++ b/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
@@ -376,6 +376,9 @@
 /* .fromgroup textarea {
   height: auto !important;
 } */
+.inbtnfr {
+  justify-content: flex-start;
+}
 .inlinefrom {
   display: flex;
   justify-content: space-between;
@@ -389,11 +392,12 @@
 }
 .inlinefrom button {
   min-height: 44px;
-  max-width: 48%;
+  max-width: 150px;
 }
 .remove {
   background: #8c8c8c;
   color: #000;
+  margin-left: 30px;
 }
 .remove:hover {
   color: #fff;
