--- a/public/static/style.css
+++ b/public/static/style.css
@@ -5,6 +5,18 @@
 .PhoneInputInput {
     padding-right: 80px;
 }
+.timerMessage{
+    position: absolute;
+    z-index: 99;
+    padding: 20px 8px;
+    font-size: 18px;
+    color: #fff;
+
+}
+.timerMessage h1{
+    font-size: 18px;
+        
+}
 @media (min-width: 1440px) {
  
 }
