--- a/src/components/AppointmentCard/AppointmentCard.module.css
+++ b/src/components/AppointmentCard/AppointmentCard.module.css
@@ -130,34 +130,29 @@
 }
 .SectionAvatarImg {
   position: relative;
+  @media (max-width: 575px) {
+    margin: 0 15px 0 0;
+  }
 }
 
 .cardContainer {
   background: #fff;
-  box-shadow: 10px 10px 5px rgb(88, 88, 88);
-  top: 336px;
-  left: 66px;
-  width: 1239px;
-  height: 341px;
+  box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  border-left: 10px solid #a91722;
-  align-items: center;
-  padding: 15px;
-  border-radius: 10px;
+  margin: 20px 0;
+  border-left: 7px solid #a91722;
+  position: relative;
+  min-height: 100%;
   @media (max-width: 575px) {
     flex-direction: column;
   }
 }
 .listingInfo {
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
-  display: flex;
-  flex-direction: column;
+  margin: 0 0 15px;
+  color: #000;
+  font-weight: 600;
+  line-height: 20px;
 }
 .listingTitle {
   margin: 0px;
@@ -173,55 +168,158 @@
 }
 .bookingContent {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 10px;
-  border-left: 2px solid rgb(201, 198, 198);
-  flex-grow: 1;
+  padding: 10px 0;
+  align-items: center;
+  @media (max-width: 575px) {
+    flex-direction: column;
+  }
+}
+.cctxtp {
+  font-size: 13px;
+  padding: 0 50px 0 0;
+  color: #7a7a7a;
+  line-height: 20px;
+  @media (max-width: 767px) {
+    padding: 0 20px 0 0;
+  }
+  @media (max-width: 575px) {
+    font-size: 12px;
+    line-height: 15px;
+    padding: 0 0 15px;
+  }
 }
 .dateInfo {
   background-color: #ffdbde;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 16%;
+  max-width: 16%;
+  position: relative;
+  justify-content: center;
+  padding: 0 10px;
+  align-items: center;
+  @media (max-width: 767px) {
+    box-sizing: content-box;
+  }
+  @media (max-width: 575px) {
+    flex-basis: 100%;
+    max-width: 100%;
+    flex-direction: row;
+    padding: 15px;
+  }
 }
+.dateInfo span {
+  color: #000;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+}
+.dateInfo span.stday {
+  font-size: 30px;
+  font-weight: 900;
+  margin: 20px 0;
+  @media (max-width: 575px) {
+    margin: 0 15px;
+  }
+}
+
 .status {
   background-color: #ffdbde;
+  margin: 0;
+  padding: 7px 15px;
+  font-size: 14px;
+  font-weight: 100;
+  color: #a91722;
+  line-height: 16px;
+  border-radius: 5px;
+  @media (max-width: 575px) {
+    margin: 0 0 10px;
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+}
+
+.statuspending {
+  background-color: #fbebb3;
+  color: #d6a700;
+}
+
+.statuscom {
+  background-color: #c4c4c4;
+  color: #4e4e4e;
 }
 .statusContainer {
-  flex-shrink: 1;
+  margin: 0 0 0 auto;
 }
 .providerAndListing {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  flex-grow: 2;
+  border-bottom: 1px solid #dadada;
+  padding: 0 0 20px;
+  margin: 0 0 15px;
+  @media (max-width: 767px) {
+    flex-direction: column;
+  }
 }
 .durationDeadline {
   display: flex;
-  flex-direction: row;
+  margin: 50px 0 0;
+  @media (max-width: 767px) {
+    margin: 0 0 15px;
+  }
+}
+.durationDeadline span {
+  font-size: 14px;
+  flex-basis: 45%;
+  padding: 0 10px 0 0;
+  font-weight: 400;
+
+  @media (max-width: 991px) {
+    font-size: 12px;
+  }
+  @media (max-width: 575px) {
+    flex-basis: 50%;
+    padding: 0 5px 0 0;
+  }
+}
+.durationDeadline span span {
+  color: #000;
+  margin: 0 5px 0 0;
+  padding: 0;
 }
 .horizontal {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  justify-content: space-between;
-  align-items: stretch;
+  padding: 15px;
+  flex-basis: 84%;
+  max-width: 84%;
+  @media (max-width: 575px) {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .userContent {
   display: flex;
-  flex-direction: row;
-  flex-grow: 1;
-  padding-left: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
-  border-right: 2px solid rgb(201, 198, 198);
+  border-left: 1px solid #dadada;
+  flex-basis: 40%;
+  max-width: 40%;
+  padding: 10px;
+  align-items: center;
+  @media (max-width: 767px) {
+    border-top: 1px solid #dadada;
+    flex-basis: 100%;
+    max-width: 100%;
+    padding: 15px 0 0;
+    border-left: 0;
+  }
 }
 .userInfo {
   margin-left: 10px;
   justify-items: center;
   text-transform: capitalize;
   @media (max-width: 575px) {
-    text-align: center;
+    text-align: left;
     margin: 10px 0;
   }
   & .userName {
@@ -233,9 +331,11 @@
 }
 .profileBtnContainer {
   margin-left: auto;
+  flex-basis: 150px;
   /* margin-right: 20px; */
   @media (max-width: 575px) {
     margin-right: auto;
+    flex-basis: 100%;
   }
 }
 .profileBtn {
@@ -268,4 +368,24 @@
   font-size: 13px;
   color: #a3a3a3;
   line-height: 18px;
+}
+.listingDurationDeadline {
+  max-width: 60%;
+  flex-basis: 60%;
+  padding: 0 10px 0 0;
+  @media (max-width: 767px) {
+    max-width: 100%;
+    flex-basis: 100%;
+    padding: 0;
+  }
+}
+.startTime {
+  color: #4e4e4e;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+}
+.startTime img {
+  height: 16px;
+  margin: 0 5px 0 0;
 }
